--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 </tr>
 </tbody>
 </table>
-<p><a href="https://georgia.247sports.com/ContentGallery/2018-NFL-Combine-How-Georgia-Bulldogs-players-measured-in-times-115874642">Click here to see how all invited UGA football players fared in the 2018 Combine.</a></p>
+<p><a href="https://georgia.247sports.com/ContentGallery/2018-NFL-Combine-How-Georgia-Bulldogs-players-measured-in-times-115874642"><i>Click here to see how all invited UGA football players fared in the 2018 Combine.</i></a></p>
 <p>This draft class (2018) is full of potential stars and starters on both sides of the ball. Nick Chubb and Sony Michel are the obvious highlights of the offensive players, who will both be studs on any NFL team. Nick Chubb had a <span style="text-decoration: underline;">faster 40 yard dash than Antonio Brown</span>, perennial all star on the Steelers. He also had the <span style="text-decoration: underline;">same vertical jump score as Julio Jones and Odell Beckham</span>. Standouts on Defense include Lorenzo Carter, Roquan Smith, and Trenton Thompson. They all posted insane results on all drills challenges they participated in. All of these players contributed highly to UGA's championship run and they will continue to do that at the highlest level of the sport.&nbsp;</p>
 <p>The biggest sleeper of the UGA draft class is Isaiah Wynn who started at Guard for the Dawgs. At 6'3" with 33 3/8" arms, 8 1/2" hands and 313 pounds he will likely become an instant starter for any team who drafts him. Film and drills suggest that even a little undersized he handles his own in the trenches. Sony and Nick attritube a lot of their success to the offensive line and at times have had high praise for Wynn. Scouts have him ranked as the highest rated player in UGA's class and one of the best offensive linemen in the whole draft class.</p>
-
 <p><img src="footballs.jpg" alt="Football"</p>
+</body>
 </html>
-
